# demand_generator_MOD

./: README.md  demand_generator.py  main.py  pyproject.toml  requirements.txt  test_demand_generator.py  test_temporal_engine.py  test_zone_manager.py
.github/workflows/: ci.yml
config/: demand_config.yaml
geographic/: __init__.py  zone_manager.py
models/: trip_request.py
patterns/: __init__.py  temporal_engine.py
